removed hardcoded myTranscriptions list fixed .list alignment property in containers.scss

--- a/assets/css/layouts/containers.scss
+++ b/assets/css/layouts/containers.scss
@@ -124,7 +124,7 @@
         flex-direction: column;
         flex-grow: 1;
         max-width: 600px;
-        align-items: center;
+        align-items: start;
     }
 
     .list-group-item {
